--- a/src/app/components/chart/chart.component.html
+++ b/src/app/components/chart/chart.component.html
@@ -1,8 +1,14 @@
 <jqxChart #myChart
-    [width]="getWidth()" [height]="500"
-    [title]="'Sales by month for:'"
-    [description]="''"
-    [showLegend]="true" [enableAnimations]="true" [padding]="padding"
-    [titlePadding]="titlePadding" [source]="sampleData" [xAxis]="xAxis"
-    [valueAxis]="valueAxis" [seriesGroups]="seriesGroups" [colorScheme]="'scheme05'">
+  [width]="'100%'" [height]="500"
+  [title]="'Sales by month for: ' + (selectedCategory || '') + ' ' + (selectedProduct || '') + ' ' + (selectedBrand || '')"
+  [description]="''"
+  [showLegend]="true" [enableAnimations]="true" [padding]="{ left: 10, top: 10, right: 15, bottom: 10 }"
+  [titlePadding]="{ left: 90, top: 0, right: 0, bottom: 10 }" [source]="sampleData" 
+  [xAxis]="{ dataField: 'Day', unitInterval: 1, tickMarks: { visible: true, interval: 1 },
+             gridLines: { visible: true, interval: 1 }, valuesOnTicks: false, padding: { left: 10, right: 10, top: 0, bottom: 10 } }"
+  [valueAxis]="{ unitInterval: 10, minValue: 0, maxValue: 50, title: { text: 'Vendas' }, labels: { horizontalAlignment: 'right' } }"
+  [seriesGroups]="[{ type: 'line', series: [{ dataField: 'Sales', symbolType: 'square',
+                    labels: { visible: true, backgroundColor: '#FEFEFE', backgroundOpacity: 0.2,
+                              borderColor: '#7FC4EF', borderOpacity: 0.7, padding: { left: 5, right: 5, top: 0, bottom: 0 } } }] }]"
+  [colorScheme]="'scheme05'">
 </jqxChart>
