--- a/src/app/components/menu/menu.component.html
+++ b/src/app/components/menu/menu.component.html
@@ -1,21 +1,24 @@
-<form [formGroup]="menuForm" (ngSubmit)="onSubmit()">
-    <label for="category1">Category 1:</label>
-    <select formControlName="category1" id="category1">
-      <option value="" disabled>Select Category 1</option>
-      <option *ngFor="let option of category1Options" [value]="option">{{ option }}</option>
+<form [formGroup]="menuForm">
+  <div>
+    <label for="category">Category:</label>
+    <select id="category" formControlName="category">
+      <option *ngFor="let category of categories" [value]="category">{{ category }}</option>
     </select>
-  
-    <label for="category2">Category 2:</label>
-    <select formControlName="category2" id="category2">
-      <option value="" disabled>Select Category 2</option>
-      <option *ngFor="let option of category2Options" [value]="option">{{ option }}</option>
+  </div>
+
+  <div>
+    <label for="product">Product:</label>
+    <select id="product" formControlName="product">
+      <option *ngFor="let product of products" [value]="product">{{ product }}</option>
     </select>
-  
-    <label for="category3">Category 3:</label>
-    <select formControlName="category3" id="category3">
-      <option value="" disabled>Select Category 3</option>
-      <option *ngFor="let option of category3Options" [value]="option">{{ option }}</option>
+  </div>
+
+  <div>
+    <label for="brand">Brand:</label>
+    <select id="brand" formControlName="brand">
+      <option *ngFor="let brand of brands" [value]="brand">{{ brand }}</option>
     </select>
-  
-    <button type="submit" [disabled]="!menuForm.valid">Submit</button>
+  </div>
 </form>
+
+<app-chart [selectedCategory]="selectedCategory" [selectedProduct]="selectedProduct" [selectedBrand]="selectedBrand"></app-chart>
